08/26/15-21:11:10: Added initial .gitignore file
08/26/15-22:32:04: Working on issue #2: Moving LuajIT binaries into sandbox.
08/27/15-17:06:51: Fixed issue #2: Installed IUP modules in sandbox.
08/27/15-17:42:53: Added luajit binaires.
08/27/15-18:58:48: Added test files for IM library.
08/27/15-18:59:51: Renamed iup tests to im.
08/27/15-20:40:22: Added binaries for luagl.
08/27/15-21:00:24: Fixed issue #4: Added tests for IUP modules.
08/27/15-22:14:23: Added Lua sandbox.
08/28/15-18:32:15: Added binary for lfs module.
08/28/15-20:48:53: Added binaries and lua files for luasocket in LuaJIT sandbox.
09/05/15-09:47:30: Updated access rights.
09/05/15-10:48:23: Added initial working implementation for test socket server/client.
09/07/15-22:54:58: Adding support for zmq bindings in lua: implemented context class and initial socket class.
09/08/15-18:07:05: Added support to close ZMQ context with finalizer.
09/08/15-20:39:57: Added proper implementation for zmq socket send/receive methods.